[gd_scene load_steps=6 format=3 uid="uid://8oon4y7nu04f"]

[ext_resource type="Script" path="res://Main/FadeMusicPlayer.gd" id="1_ntyhe"]
[ext_resource type="AudioStream" uid="uid://qp8hrbd5mio6" path="res://Resources/music/title_music.tres" id="2_me7ia"]

[sub_resource type="Animation" id="Animation_72osx"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelAudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, -10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, -10.0]
}

[sub_resource type="Animation" id="Animation_maghj"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_fade_track"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelAudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-10.0, -80.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-10.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53c5u"]
_data = {
"fade_in": SubResource("Animation_72osx"),
"fade_out": SubResource("Animation_maghj")
}

[node name="FadeMusicPlayer" type="Node"]
process_mode = 3
script = ExtResource("1_ntyhe")

[node name="LevelAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"Music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_me7ia")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_53c5u")
}

[node name="RetryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="RetryTimer" to="." method="_play_fade_track"]
